# myonsh

./: .gitignore  CMakeLists.txt  README.md
config/: myonsh_config.h.in
example/: .myonshrc
src/: application.cpp  application.h  config.h  context.cpp  context.h  context.h.autosave  environment.cpp  environment.h  environment_manager.h  exceptions.h  history.cpp  history.h  interactive_source.cpp  interactive_source.h  macro_preprocessor.h  main.cpp  preprocessor.cpp  preprocessor.h  script_interpreter.cpp  script_interpreter.h  script_source.h  stream_source.cpp  stream_source.h  utils.h  word_divider.h
src/cinclude/: cerrno.h  creadline.h  cunistd.h
